<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Strings related to the app -->
    <string name="app_name">FloatAR</string>
    <string name="todo">ToDo</string>
    <string name="floatar_logo">FloatAR logo</string>

    <!-- Strings related to the main menu -->
    <string name="settings">Ajustes</string>
    <string name="help">Ayuda</string>
    <string name="about">Sobre la aplicación</string>

    <!-- Strings related to the game -->
    <string name="player_turn">1</string>
    <string name="computer_turn">2</string>
    <string name="score_format">Score</string>

    <!-- Strings related to the main activity -->
    <string name="single_player">Un jugador</string>
    <string name="exit_game">Salir</string>
    <string name="multi_player">Multijugador</string>

    <!-- Strings related to the create board activity -->
    <string name="but_boat_s1">Barco 1</string>
    <string name="but_boat_s2">Barco 2</string>
    <string name="but_boat_s3">Barco 3</string>
    <string name="but_boat_s4">Barco 4</string>
    <string name="but_horizontal_boat">Horizontal</string>
    <string name="but_vertical_boat">Vertical</string>
    <string name="create_board">Crear tablero</string>
    <string name="boats_left">Barcos por colocar:\n</string>
    <string name="boats_left_1"> de tamaño 1\n</string>
    <string name="boats_left_2"> de tamaño 2\n</string>
    <string name="boats_left_3"> de tamaño 3\n</string>
    <string name="boats_left_4"> de tamaño 4</string>

    <!-- Strings related to the single player activity -->
    <string name="player_board">Tu tablero</string>
    <string name="opponent_board">Tablero del oponente</string>

    <!-- Strings related to the settings activity -->
    <string name="settings_title">Configuración</string>
    <string name="notifications_title">Notificaciones</string>
    <string name="theme_title">Tema oscuro</string>
    <string name="volume_title">Volumen</string>
    <string name="sava_changes_title">Guardar cambios</string>
    <string name="settings_language">Idioma</string>
    <string name="language_selector">Language selector</string>

    <!-- Strings related to the help activity -->
    <string name="help_title">Uso de FloatAR</string>
    <string name="help_text_title">¡Bienvenido a la pantalla de ayuda de FloatAR!</string>
    <string name="help_text_content">
        FloatAR es una aplicación que permite jugar a Hundir la flota en modo un jugador contra la
        IA y en modo multijugador online en tiempo real a través de salas. A mayores también cuenta
        con una demo donde se puede ver uno de los barcos de la flota y un sistema de colocación de
        barcos en el tablero sencilla e intuitiva. Aquí te presentamos las funcionalidades de forma
        más precisa:\n\n

        Modo de un jugador: para poder jugar solo, puedes acceder al modo para un jugador en donde
        te enfrentarás a una sencilla IA. Para hacer esto, tendrás que diseñar tu flota en el
        creador una vez accedes a este modo. El procedimiento es sencillo, ya que, a través de
        botones para seleccionar tipo de barco y orientación, podemos elegir la posición de los
        barcos. Solo con clicar en el tablero añadiremos uno y, dependiendo de si estamos en modo
        vertical u horizontal, el barco se establecerá hacia abajo o hacia la derecha. Para empezar
        a jugar una vez confirmamos el tablero de juego, solo tendremos que clicar en el nuevo
        tablero que aparecerá para atacar al rival. El tablero más pequeño que aparece encima
        será el suyo, pudiendo ver como se está desarrollando la partida. Es importante destacar que
        los bloques azules son sus barcos, los grises son impactos contra el agua, y los rojos son
        impactos contra barcos. Al finalizarse la partida, se pasará a una nueva pantalla con el
        mensaje de victoria o derrota y un botón para volver a la pantalla principal.\n\n

        Modo multijugador: al acceder a este modo, tendremos la posibilidad de crear una nueva sala
        o de unirse a una ya creada. Las salas tienen espacio para 2 jugadores y, una vez se acaba
        la partida o los jugadores salen, se borrará toda la información de la misma del servidor.
        El proceso para crear el tablero es idéntico al del modo de un jugador y el desarrollo de la
        partida también. La única diferencia es el establecimiento de turnos y de tiempo de
        inactividad que puede llegar a eliminar la sala. Una vez se acaba la partida se elimina la
        sala y se muestra el resultado para cada jugador (victoria o derrota).\n\n

        Demostración de Realidad Aumentada: por motivos de tiempo, no pudimos desarrollar un modo de
        juego que use esta tecnología, por lo que apostamos por hacer un pequeño ejemplo. Al acceder
        a este modo, podemos situar en una superficie un buque de guerra de la flota que será visto
        a través del dispositivo móvil.\n\n

        Esperamos que esta pantalla de ayuda te haya sido útil. ¡Diviértase jugando con FloatAR!
    </string>

    <!-- Strings related to the about activity -->
    <string name="version_number">0.1</string>
    <string name="developers_name">
        Antonio Vila Leis\nHugo Sanjiao Varela\nBreogán Fernández Moreira\nÓscar Alejandro Manteiga Seoane
    </string>
    <string name="developers_email">
        antonio.vila@udc.es\nh.sanjiao@udc.es\nbreogan.fernandez@udc.es\noscar.manteiga@udc.es
    </string>

    <!-- Strings related to the game over activity -->
    <string name="you_won">¡Has ganado!</string>
    <string name="you_lost">Has perdido</string>
    <string name="play_again">Jugar de nuevo</string>
    <string name="game_over">Fin del juego</string>

    <!-- Strings related to the lobby activity -->
    <string name="create_lobby">Crear lobby</string>
    <string name="open_lobbies">Lobbies disponibles:</string>
    <string name="lobby_name">Nombre de la lobby</string>
    <string name="join_lobby">Unirse a lobby</string>
    <string name="your_name">Tu nombre</string>
    <string name="lobby">Salas</string>

    <!-- Other strings -->
    <string name="not_implemented_yet">No implementado</string>
    <string name="not_implemented_yet_description">Esta actividad está en proceso de construcción.</string>
    <string name="info_logo">info_logo</string>
    <string name="show_info">Mostrar información</string>

    <!-- Strings related to the database -->
    <string name="database">https://ps-floatar-default-rtdb.europe-west1.firebasedatabase.app/</string>

    <!-- Other -->
    <string name="confirm">Confirmar</string>
    <string name="demo_ar">Demo AR</string>
    <string name="depth_api">API de profundidad</string>
    <string name="instant_placement">Instant Placement</string>
    <string name="battleship">Buque de guerra</string>
    <string name="AR_demo">Demo de RA</string>
    <string name="turn">Turno de</string>

    <!-- Toasts -->
    <string name="waiting_for_opponent">Esperando al oponente…</string>
    <string name="your_turn">Tu turno</string>
    <string name="invalid_placement">Casilla no válida</string>
    <string name="lost_connection">Conexión perdida</string>
    <string name="won">Ganaste</string>
    <string name="lost">Perdiste</string>
    <string name="invalid_name">El nombre de la lobby no puede estar vacío</string>
    <string name="lobby_created">Lobby creada</string>
    <string name="lobby_joined_failed">No se pudo unir a la lobby</string>
    <string name="lobby_full">La sala está llena</string>
    <string name="load_model_failed">Modelo no cargado satisfactoriamente</string>
    <string name="model_not_found">Modelo no encontrado</string>
    <string name="not_more_boats">Imposible añadir más barcos de este tamaño</string>
    <string name="not_space">Espacio insuficiente</string>
    <string name="could_not_create_boat">Imposible crear barco</string>
    <string name="save_changes">Cambios guardados</string>

</resources>