<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menuLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="10"
                android:rowCount="10"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:layout_gravity="center"
                android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_boat_s1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_boat_s1" />

            <Button
                android:id="@+id/but_boat_s2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_boat_s2" />

            <Button
                android:id="@+id/but_boat_s3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_boat_s3" />

            <Button
                android:id="@+id/but_boat_s4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_boat_s4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_horizontal_boat"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_horizontal_boat" />

            <Button
                android:id="@+id/but_vertical_boat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but_vertical_boat"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|top"
            android:orientation="horizontal">
            <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/confirm" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_boats_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text=""
            android:textSize="16sp"
            android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>